= Highlight CHANGELOG
:reproducible:
:sectanchors:
:sectnums!:
:toc-title: Contents
:toc: left
:toclevels: 1

== highlight 4.4

30.10.2022

  - added support for Zig
  - added `Legacy` option in lsp.conf to add support for LSP servers without capabilities report
  - CLI: added `--ls-legacy` option
  - GUI: added legacy checkbox in the LSP section

== highlight 4.3

24.09.2022

  - added support for Carbon
  - added support for Fortran77 star comments comments (https://gitlab.com/saalen/highlight/-/issues/208)
  - added support for PowerShell block comments (https://gitlab.com/saalen/highlight/-/issues/210)
  - fixed Python formatted string pattern (https://gitlab.com/saalen/highlight/-/issues/212)
  - added new shell completion generation script (https://gitlab.com/saalen/highlight/-/merge_requests/137/)
  - W32: fixed Windows compilation headers (https://gitlab.com/saalen/highlight/-/merge_requests/138)


== highlight 4.2

22.03.2022

  - added support for Critic markup (https://gitlab.com/saalen/highlight/-/issues/197)
  - added support for jam/ham (https://gitlab.com/saalen/highlight/-/issues/196)
  - added support for PureScript (https://gitlab.com/saalen/highlight/-/merge_requests/132/)
  - added support for Nix (https://gitlab.com/saalen/highlight/-/issues/200)
  - added ino file mapping / Arduino C (https://gitlab.com/saalen/highlight/-/issues/201)
  - fixed RTF page color attributes (https://gitlab.com/saalen/highlight/-/issues/195)
  - fixed identifier parsing in yaml.lang (https://gitlab.com/saalen/highlight/-/issues/190)
  - fixed symbol parsing in lisp.lang (https://gitlab.com/saalen/highlight/-/issues/198)
  - fixed string parsing in csharp.lang (https://gitlab.com/saalen/highlight/-/issues/199)
  - fixed string parsing in conf.lang (https://gitlab.com/saalen/highlight/-/issues/203)
  - added make target `install-lib-shared` to install shared lib (https://gitlab.com/saalen/highlight/-/issues/202)