@@ -19,6 +19,8 @@ Servers = {
   { Server="rust-analyzer", Exec="rust-analyzer", Syntax="rust", Delay=250, Options={} },
 
   { Server="pyls", Exec="pyls", Syntax="python", Options={"--check-parent-process"} },
+  { Server="pylsp", Exec="pylsp", Syntax="python", Options={"--check-parent-process"} },
+
   { Server="pyright", Exec="pyright-langserver", Syntax="python", Options={"--stdio"}, Legacy=true },
 
   { Server="R", Exec="R", Syntax="r", Options={"--slave", "-e", "languageserver::run()"} },
